[WFLY-10933] Enabling checkstyle maven plugin on modular JVMs. Removing '--illegal-access=permit' which is default for JDK9, JDK10 & JDK11.